k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pena-e-arte
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
