k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pena-e-arte-api
  namespace: pena-e-arte
spec:
  type: ClusterIP
  selector:
    app: pena-e-arte-api
  ports:
    - port: 8080
      targetPort: 8080
