k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pena-e-arte-frontend
  namespace: pena-e-arte
spec:
  type: ClusterIP
  selector:
    app: pena-e-arte-frontend
  ports:
    - port: 8080
      targetPort: 8080
