k8s/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pena-e-arte-redis
  namespace: pena-e-arte
spec:
  type: ClusterIP
  selector:
    app: pena-e-arte-redis
  ports:
    - port: 6379
      targetPort: 6379
